--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,18 +1,15 @@
 [Unit]
-Description=Gunicorn instance to serve web_dynamic/2-hbnb.py
+Description=Gunicorn instance to serve AirBnB clone v4 (2-hbnb)
 After=network.target
 
 [Service]
 User=ubuntu
-Group=www-data
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
-ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log web_dynamic.2-hbnb:application
-Restart=always
+ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log
+StandardOutput=append:/tmp/airbnb-access.log
+StandardError=append:/tmp/airbnb-error.log
 SyslogIdentifier=gunicorn
-StandardOutput=syslog
-StandardError=syslog
-SyslogFacility=local7
-SyslogLevel=info
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
